--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "alpinejs": "^3.9.6"
+        "alpinejs": "^3.9.6",
+        "tailwindcss": "^3.0.24"
     }
 }
